# rtspclient

./: CMakeLists.txt  README.md  main.cpp
